--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,23 +8,21 @@
 </head>
 <body>
     <div class="header">
-    <div class="header-content">
-        <h1>Feliz Aniversário</h1>
-        <h1>Michaelly</h1>
-    </div>
+        <div class="header-content">
+            <h1>Feliz Aniversário</h1>
+            <h1>Michaelly</h1>
+        </div>
         <img src="src/Animated GIFs graphic.gif" alt="Aniversário Michaelly" class="birthday-gif">
         <img src="src/Animated GIFs graphic.gif" alt="Aniversário Michaelly" class="birthday-gif2">
         <img src="src/download.gif" alt="Aniversário Michaelly" class="birthday-gif3">
         <img src="src/download.gif" alt="Aniversário Michaelly" class="birthday-gif4">
     </div>
+
     <div class="content">
         <p>Hoje é um dia especial para você!</p>
         <p>Feliz Aniversário Michaelly</p>
         <p>Que todos os seus sonhos se realizem!</p>
         <p>Com carinho, Prince</p>
     </div>
-        
-    </footer>
-    
 </body>
 </html>
