--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta viewport bloqueada para largura fixa -->
+    <meta name="viewport" content="width=1100, initial-scale=1.0">
     <title>Aniversário Michaelly</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,10 +13,10 @@
             <h1>Feliz Aniversário</h1>
             <h1>Michaelly</h1>
         </div>
-        <img src="src/Animated GIFs graphic.gif" alt="Aniversário Michaelly" class="birthday-gif">
-        <img src="src/Animated GIFs graphic.gif" alt="Aniversário Michaelly" class="birthday-gif2">
-        <img src="src/download.gif" alt="Aniversário Michaelly" class="birthday-gif3">
-        <img src="src/download.gif" alt="Aniversário Michaelly" class="birthday-gif4">
+
+        <!-- Bolos (topo, dentro do header) -->
+        <img src="src/Animated GIFs graphic.gif" alt="Bolo topo direito" class="birthday-gif">
+        <img src="src/Animated GIFs graphic.gif" alt="Bolo topo esquerdo" class="birthday-gif2">
     </div>
 
     <div class="content">
@@ -23,7 +24,13 @@
         <p>Feliz Aniversário Michaelly</p>
         <p>Que todos os seus sonhos se realizem!</p>
         <p>Com carinho, Prince</p>
+
+        <!-- GIF central (opcional) -->
+        <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmV6cDgxczV3OXBjdHQ1bWcwejRzY3NqN3VjdTdvNWZ6dHIxbzNiZCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/zKSncwDt0kVtMMhGaG/giphy.gif" alt="Aniversário Michaelly" class="center-gif">
     </div>
+
+    <!-- Balões (rodapé do site, por cima de tudo) -->
+    <img src="src/download.gif" alt="Balões inferior esquerdo" class="birthday-gif3">
+    <img src="src/download.gif" alt="Balões inferior direito" class="birthday-gif4">
 </body>
 </html>
-
