--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <!-- Meta viewport bloqueada para largura fixa -->
-    <meta name="viewport" content="width=1100, initial-scale=1.0">
+    <!-- Viewport responsiva -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aniversário Michaelly</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -25,7 +25,7 @@
         <p>Que todos os seus sonhos se realizem!</p>
         <p>Com carinho, Prince</p>
 
-        <!-- GIF central (opcional) -->
+        <!-- GIF central -->
         <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmV6cDgxczV3OXBjdHQ1bWcwejRzY3NqN3VjdTdvNWZ6dHIxbzNiZCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/zKSncwDt0kVtMMhGaG/giphy.gif" alt="Aniversário Michaelly" class="center-gif">
     </div>
 
