--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>Michaelly</h1>
         </div>
 
-        <!-- Bolos (topo, dentro do header) -->
+        <!-- Bolos (topo) -->
         <img src="src/Animated GIFs graphic.gif" alt="Bolo topo direito" class="birthday-gif">
         <img src="src/Animated GIFs graphic.gif" alt="Bolo topo esquerdo" class="birthday-gif2">
     </div>
@@ -29,7 +29,7 @@
         <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmV6cDgxczV3OXBjdHQ1bWcwejRzY3NqN3VjdTdvNWZ6dHIxbzNiZCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/zKSncwDt0kVtMMhGaG/giphy.gif" alt="Aniversário Michaelly" class="center-gif">
     </div>
 
-    <!-- Balões (rodapé do site, por cima de tudo) -->
+    <!-- Balões (rodapé do site, cada um no canto) -->
     <img src="src/download.gif" alt="Balões inferior esquerdo" class="birthday-gif3">
     <img src="src/download.gif" alt="Balões inferior direito" class="birthday-gif4">
 </body>
