--- a/index.html
+++ b/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <!-- Força largura fixa (mantém proporções do PC no mobile) -->
-    <meta name="viewport" content="width=1100, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>Aniversário Michaelly</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <div class="header">
-        <div class="header-content">
-            <h1>Feliz Aniversário</h1>
-            <h1>Michaelly</h1>
-        </div>
+  <div class="site-wrap">
+    <header class="header">
+      <div class="header-content">
+        <h1>Feliz Aniversário</h1>
+        <h1>Michaelly</h1>
+      </div>
 
-        <!-- Bolos (topo, dentro do header) -->
-        <img src="src/Animated GIFs graphic.gif" alt="Bolo topo direito" class="birthday-gif">
-        <img src="src/Animated GIFs graphic.gif" alt="Bolo topo esquerdo" class="birthday-gif2">
-    </div>
+      <!-- Bolos (topo, dentro do header) -->
+      <img src="src/Animated GIFs graphic.gif" alt="Bolo topo direito" class="cake cake-right">
+      <img src="src/Animated GIFs graphic.gif" alt="Bolo topo esquerdo" class="cake cake-left">
+    </header>
 
-    <div class="content">
-        <p>Hoje é um dia especial para você!</p>
-        <p>Feliz Aniversário Michaelly</p>
-        <p>Que todos os seus sonhos se realizem!</p>
-        <p>Com carinho, Prince</p>
+    <main class="content">
+      <p>Hoje é um dia especial para você!</p>
+      <p>Feliz Aniversário Michaelly</p>
+      <p>Que todos os seus sonhos se realizem!</p>
+      <p>Com carinho, Prince</p>
 
-        <!-- GIF central -->
-        <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmV6cDgxczV3OXBjdHQ1bWcwejRzY3NqN3VjdTdvNWZ6dHIxbzNiZCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/zKSncwDt0kVtMMhGaG/giphy.gif"
-             alt="Aniversário Michaelly" class="center-gif">
-    </div>
+      <!-- GIF central -->
+      <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmV6cDgxczV3OXBjdHQ1bWcwejRzY3NqN3VjdTdvNWZ6dHIxbzNiZCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/zKSncwDt0kVtMMhGaG/giphy.gif"
+           alt="Aniversário Michaelly" class="center-gif">
+    </main>
 
-    <!-- Balões (rodapé do site, cada um em seu canto) -->
-    <!-- NOTA: esses estão fora de .header/.content e são posicionados em relação ao <body> -->
-    <img src="src/download.gif" alt="Balões inferior esquerdo" class="birthday-gif3">
-    <img src="src/download.gif" alt="Balões inferior direito" class="birthday-gif4">
+    <!-- Balões (rodapé do site, em seus cantos) -->
+    <img src="src/download.gif" alt="Balões inferior esquerdo" class="balloon balloon-left">
+    <img src="src/download.gif" alt="Balões inferior direito" class="balloon balloon-right">
+  </div>
 </body>
 </html>
