--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>Aniversário Michaelly</title>
-    <link rel="stylesheet" href="styles.css" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Aniversário Michaelly</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="site-wrap">
+
     <header class="header">
       <div class="header-content">
         <h1>Feliz Aniversário</h1>
@@ -15,8 +16,16 @@
       </div>
 
       <!-- Bolos (topo, dentro do header) -->
-      <img src="src/Animated GIFs graphic.gif" alt="Bolo topo direito" class="cake cake-right">
-      <img src="src/Animated GIFs graphic.gif" alt="Bolo topo esquerdo" class="cake cake-left">
+      <img
+        src="src/Animated GIFs graphic.gif"
+        alt="Bolo topo direito"
+        class="cake cake-right"
+      />
+      <img
+        src="src/Animated GIFs graphic.gif"
+        alt="Bolo topo esquerdo"
+        class="cake cake-left"
+      />
     </header>
 
     <main class="content">
@@ -26,13 +35,25 @@
       <p>Com carinho, Prince</p>
 
       <!-- GIF central -->
-      <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmV6cDgxczV3OXBjdHQ1bWcwejRzY3NqN3VjdTdvNWZ6dHIxbzNiZCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/zKSncwDt0kVtMMhGaG/giphy.gif"
-           alt="Aniversário Michaelly" class="center-gif">
+      <img
+        src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmV6cDgxczV3OXBjdHQ1bWcwejRzY3NqN3VjdTdvNWZ6dHIxbzNiZCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/zKSncwDt0kVtMMhGaG/giphy.gif"
+        alt="Aniversário Michaelly"
+        class="center-gif"
+      />
     </main>
 
     <!-- Balões (rodapé do site, em seus cantos) -->
-    <img src="src/download.gif" alt="Balões inferior esquerdo" class="balloon balloon-left">
-    <img src="src/download.gif" alt="Balões inferior direito" class="balloon balloon-right">
+    <img
+      src="src/download.gif"
+      alt="Balões inferior esquerdo"
+      class="balloon balloon-left"
+    />
+    <img
+      src="src/download.gif"
+      alt="Balões inferior direito"
+      class="balloon balloon-right"
+    />
+
   </div>
 </body>
 </html>
